apps/tintinho-net/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tintinho-net
spec:
  selector:
    app.kubernetes.io/name: tintinho-net
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
